# Chat-over-PDF

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: build_index.py  main.py  viewer.html
scripts/: eval.py
src/: embeddings.py  indexer.py  ingest.py  qa.py
tests/: test_indexer.py  test_ingest.py
